Fix example + Remove old example + Fix opening hours + Floating small view + Shadow cut + Button cut + Remove photo on small placelist

--- a/src/bottomview/bottomview.scss
+++ b/src/bottomview/bottomview.scss
@@ -8,12 +8,15 @@
   position: absolute;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 -1px 0 rgba(0, 0, 0, 0.02);
   overflow-y: scroll;
-
+  margin: 8px;
+  border-radius: 8px;
   &.mwz-gone {
     height: 0%;
   }
   &.mwz-expanded {
     height: 100%;
+    margin: 0;
+    border-radius: 0;
   }
 
   // &.in-transition {
@@ -27,6 +30,8 @@
     width: 100%;
     height: unset;
     z-index: 20;
+    margin: 0;
+    border-radius: 0;
 
     &.mwz-expanded {
       position: absolute;
