--- a/src/bottomview/placeDetails/placeDetails.scss
+++ b/src/bottomview/placeDetails/placeDetails.scss
@@ -1,7 +1,6 @@
 .mwz-small-view-container {
   z-index: 2;
   flex-direction: column;
-  padding: 16px;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.2);
 }
 
@@ -17,6 +16,8 @@
   overflow-x: scroll;
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+  padding: 0 16px;
+  padding-bottom: 12px;
 
   &::-webkit-scrollbar {
     display: none;
@@ -52,6 +53,7 @@
   height: 20px;
   display: flex;
   justify-content: space-between;
+  padding: 16px 16px 0 16px;
 }
 
 .mwz-small-view-toggle-button {
@@ -68,6 +70,7 @@
   color: gray;
   margin-bottom: 2px;
   overflow: hidden;
+  padding: 0 16px;
 }
 
 .mwz-small-view-opening-status {
@@ -75,6 +78,7 @@
   font-size: 14px;
   color: gray;
   margin-bottom: 2px;
+  padding: 0 16px;
 }
 .mwz-small-view-button {
   &.mwz-outlined {
@@ -100,7 +104,7 @@
 
 .mwz-bottom-photos-view {
   position: relative;
-  display: flex;
+  display: none;
   overflow-y: hidden;
   overflow-x: scroll;
   height: 28%;
@@ -108,6 +112,10 @@
   &.mwz-gone {
     display: none;
   }
+}
+
+.mwz-expanded .mwz-bottom-photos-view {
+  display: flex;
 }
 
 .mwz-bottom-photos-view-image {
